src/tui/snapshot_tests/snapshots/maestro__tui__snapshot_tests__overview__panel_view_empty_last_message_shows_placeholder.snap
---
source: src/tui/snapshot_tests/overview.rs
expression: terminal.backend()
---
"╔═══════════════════════════════════════════════[ #42 — Add login flow ]═══════════════════════════════════════════════╗"
"║ RUNNING 2m30s  agent:claude  $0.12                                                                                  ║"
"║ctx: [▓▓▓▓░░░░░░] 35%                                                                                                 ║"
"║tok: ---                                                                                                              ║"
"║0 files                                                                                                               ║"
"║> _ Writing tests                                                                                                     ║"
"║Waiting for output...                                                                                                 ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"╚══════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╝"
