src/tui/snapshot_tests/snapshots/maestro__tui__snapshot_tests__overview__panel_view_multiple_sessions.snap
---
source: src/tui/snapshot_tests/overview.rs
expression: terminal.backend()
---
"╔═══════[ #1 — Add login flow ]════════╗╔═════[ #2 — Fix database crash ]══════╗╔═════[ #3 — Add logout endpoint ]═════╗"
"║ RUNNING 2m30s  agent:claude  $0.12  ║║ COMPLETED 2m30s  agent:claude  $0.50║║ ERRORED 2m30s  agent:claude  $0.03  ║"
"║ctx: [▓▓▓▓░░░░░░] 35%                 ║║ctx: [▓▓▓▓░░░░░░] 35%                 ║║ctx: [▓▓▓▓░░░░░░] 35%                 ║"
"║tok: ---                              ║║tok: ---                              ║║tok: ---                              ║"
"║0 files                               ║║0 files                               ║║0 files                               ║"
"║> _ Writing tests                     ║║> Writing tests                       ║║> _ Writing tests                     ║"
"║Analyzing codebase...                 ║║Analyzing codebase...                 ║║Analyzing codebase...                 ║"
"║                                      ║║                                      ║║                                      ║"
"║                                      ║║                                      ║║                                      ║"
"║                                      ║║                                      ║║                                      ║"
"║                                      ║║                                      ║║                                      ║"
"║                                      ║║                                      ║║                                      ║"
"║                                      ║║                                      ║║                                      ║"
"║                                      ║║                                      ║║                                      ║"
"║                                      ║║                                      ║║                                      ║"
"║                                      ║║                                      ║║                                      ║"
"║                                      ║║                                      ║║                                      ║"
"║                                      ║║                                      ║║                                      ║"
"║                                      ║║                                      ║║                                      ║"
"║                                      ║║                                      ║║                                      ║"
"║                                      ║║                                      ║║                                      ║"
"║                                      ║║                                      ║║                                      ║"
"║                                      ║║                                      ║║                                      ║"
"║                                      ║║                                      ║║                                      ║"
"║                                      ║║                                      ║║                                      ║"
"║                                      ║║                                      ║║                                      ║"
"║                                      ║║                                      ║║                                      ║"
"║                                      ║║                                      ║║                                      ║"
"║                                      ║║                                      ║║                                      ║"
"║                                      ║║                                      ║║                                      ║"
"║                                      ║║                                      ║║                                      ║"
"║                                      ║║                                      ║║                                      ║"
"║                                      ║║                                      ║║                                      ║"
"║                                      ║║                                      ║║                                      ║"
"║                                      ║║                                      ║║                                      ║"
"║                                      ║║                                      ║║                                      ║"
"║                                      ║║                                      ║║                                      ║"
"║                                      ║║                                      ║║                                      ║"
"║                                      ║║                                      ║║                                      ║"
"╚══════════════════════════════════════╝╚══════════════════════════════════════╝╚══════════════════════════════════════╝"
